fix navbar-collapse

--- a/frontend/src/components/layout/Header.scss
+++ b/frontend/src/components/layout/Header.scss
@@ -59,18 +59,27 @@
     }
 
     &__nav-collapse {
-      @include media-breakpoint-up(md) {
-        border-top: 1px solid rgba(255, 255, 255, 0.15);
-        position: fixed;
-        z-index: 1030;
-        top: 80px;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        padding: 10%;
-        overflow-y: auto;
-        background-color: #3b3b3b;
-        transition: all 0.5s;
+      border-top: 1px solid rgba(255, 255, 255, 0.15);
+      position: fixed;
+      z-index: 1030;
+      top: 80px;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      padding: 10%;
+      overflow-y: auto;
+      background-color: #3b3b3b;
+      transition: all 0.5s;
+
+      @include media-breakpoint-up(lg) {
+        display: flex;
+        flex-basis: auto;
+        position: relative;
+        top: 0;
+        height: auto;
+        padding: 0;
+        background: none;
+        border: none;
       }
     }
   }
